# ruv-FANN

./: COMPREHENSIVE_BEFORE_AFTER_REPORT.md  Cargo.toml  INTELLIGENT_SWARM_COMMUNICATION_DESCRIPTION.md  SWARM_COMMUNICATION_VALIDATION_REPORT.md  package-lock.json  run_swarm_test.sh
.cargo/: config.toml
.swarm/: memory.db-shm  memory.db-wal
benches/: metal_performance_bench.rs  neural_network.rs
cuda-wasm/: CHANGELOG.md  Cargo.toml  RELEASE_v0.1.1.md  verification_summary.md
docs/: RUV-Swarm Independent Verification Request
examples/ran/: .mcp.json  Cargo.toml  README.md  prd.md
examples/ran/.github/workflows/: ci.yml
examples/ran/cell-clustering-agent/: Cargo.toml  build.rs
examples/ran/cell-clustering-agent/proto/: cell_clustering.proto
examples/ran/cell-clustering-agent/src/: lib.rs
examples/ran/cell-clustering-agent/src/clustering/: algorithms.rs  dbscan.rs  engine.rs  hierarchical.rs  hybrid.rs  kmeans.rs  metrics.rs  mod.rs
examples/ran/cell-clustering-agent/src/profiling/: analytics.rs  mod.rs
examples/ran/cell-sleep-forecaster/: Cargo.toml  README.md  config.toml
examples/ran/cell-sleep-forecaster/benches/: forecasting_benchmark.rs
examples/ran/cell-sleep-forecaster/src/: config.rs  forecasting.rs  lib.rs  main.rs  metrics.rs  monitoring.rs  network.rs  optimization.rs
examples/ran/docker/: Dockerfile.platform-foundation  docker-compose.yml
examples/ran/network-intelligence/dni-cap/: Cargo.toml
examples/ran/network-intelligence/dni-cap/src/: config.rs  error.rs  forecasting.rs  lib.rs  models.rs  types.rs
examples/ran/network-intelligence/dni-slice/: Cargo.toml  build.rs
examples/ran/network-intelligence/dni-slice/proto/: slice_service.proto
examples/ran/network-intelligence/dni-slice/src/: config.rs  error.rs  lib.rs  predictor.rs
examples/ran/opt-mob-01/: Cargo.toml  README.md  build.rs
examples/ran/opt-mob-01/proto/: handover.proto
examples/ran/opt-mob-01/src/: backtesting.rs  data.rs  features.rs  lib.rs  main.rs  model.rs  prediction.rs  service.rs  utils.rs
examples/ran/pfs-core-01/: Cargo.toml  README.md  build.rs  config.toml
examples/ran/pfs-core-01/benches/: prediction_performance.rs  training_performance.rs
examples/ran/pfs-core-01/examples/: sine_wave_data.json  xor_training_data.json
examples/ran/pfs-core-01/proto/: neural_service.proto
examples/ran/pfs-core-01/src/: config.rs  conversion.rs  error.rs  lib.rs  model_manager.rs  service.rs
examples/ran/pfs-core-01/tests/: integration_tests.rs
examples/ran/pfs-data-01/: Cargo.toml  README.md  build.rs  config.toml
examples/ran/pfs-data-01/benches/: ingestion_benchmark.rs
examples/ran/pfs-data-01/proto/: ingestion.proto
examples/ran/pfs-data-01/src/: config.rs  error.rs  ingestion.rs  lib.rs  main.rs  monitoring.rs  schema.rs  service.rs  storage.rs  watcher.rs
examples/ran/pfs-data-01/tests/: integration_tests.rs
examples/ran/pfs-feat-01/: Cargo.toml  README.md  config.toml
examples/ran/pfs-feat-01/benches/: feature_generation.rs
examples/ran/pfs-feat-01/examples/: basic_usage.rs
examples/ran/pfs-feat-01/proto/: feature_engineering.proto
examples/ran/pfs-feat-01/src/: config.rs  engine.rs  error.rs  error_original.rs  features.rs  grpc_service.rs  lib.rs  lib_original.rs  main.rs  main_original.rs  stats.rs  validation.rs
examples/ran/pfs-feat-01/tests/: integration_tests.rs
examples/ran/pfs-reg-01/: Cargo.toml  README.md  build.rs  config.toml
examples/ran/pfs-reg-01/proto/: model_registry.proto
examples/ran/pfs-reg-01/src/: config.rs  error.rs  lib.rs  metrics.rs
examples/ran/pfs-reg-01/src/database/: mod.rs
examples/ran/pfs-reg-01/src/database/entities/: deployments.rs  metrics.rs  mod.rs  model_versions.rs  models.rs
examples/ran/pfs-reg-01/src/database/migrations/: m20240101_000001_create_models_table.rs  mod.rs
examples/ran/pfs-reg-01/src/grpc/: mod.rs  server.rs
examples/ran/pfs-reg-01/src/services/: mod.rs  registry_service.rs
examples/ran/pfs-reg-01/src/storage/: filesystem_storage.rs  mod.rs
examples/ran/scell_manager/: Cargo.toml  README.md  build.rs
examples/ran/scell_manager/proto/: scell_manager.proto
examples/ran/scell_manager/src/: config.rs  data.rs  lib.rs  metrics.rs  model.rs  prediction.rs  service.rs  types.rs  utils.rs
examples/ran/scripts/: setup.sh
examples/ran/service-assurance/asa-qos/: Cargo.toml  build.rs
examples/ran/service-assurance/asa-qos/src/: config.rs  error.rs  forecasting.rs  lib.rs  service.rs  storage.rs  types.rs  utils.rs
examples/ran/service-assurance/asa-qos/src/models/: arima.rs  ensemble.rs  gru.rs  lstm.rs  mod.rs  neural_network.rs  transformer.rs
examples/ran/service-assurance/asa-qos/src/proto/: mod.rs
examples/ran/shared/common/: Cargo.toml
examples/ran/shared/common/src/: error.rs  lib.rs
examples/ran/shared/proto/: Cargo.toml  build.rs
examples/ran/shared/proto/proto/: common.proto  data_ingestion.proto  feature_engineering.proto  ml_core.proto  model_registry.proto  network_intelligence.proto  predictive_optimization.proto  service_assurance.proto
examples/ran/shared/proto/src/: lib.rs
examples/ran/src/: lib.rs
examples/ran/src/asa_5g/: endc_predictor.rs  mitigation.rs  mod.rs  monitoring.rs  signal_analyzer.rs
examples/ran/src/common/: config.rs  database.rs  metrics.rs  mod.rs  utils.rs
examples/ran/src/features/: mod.rs
examples/ran/src/models/: mod.rs
examples/ran/uplink-interference-classifier/: Cargo.toml  README.md  build.rs
examples/ran/uplink-interference-classifier/examples/: demo.rs
examples/ran/uplink-interference-classifier/proto/: interference_classifier.proto
examples/ran/uplink-interference-classifier/scripts/: run_demo.sh
examples/ran/uplink-interference-classifier/src/: lib.rs  main.rs
examples/ran/uplink-interference-classifier/src/features/: mod.rs
examples/ran/uplink-interference-classifier/src/models/: mod.rs
examples/ran/uplink-interference-classifier/src/proto/: mod.rs
examples/ran/uplink-interference-classifier/src/service/: mod.rs
neuro-divergent/: Cargo.toml
ruv-swarm/: Cargo.toml
(+187 files in other folders)
