[package]
name = "cell-clustering-agent"
version = "0.1.0"
edition = "2021"
authors = ["RAN Intelligence Platform Team"]
description = "DNI-CLUS-01 - Automated Cell Profiling Agent for RAN Intelligence Platform"
license = "MIT OR Apache-2.0"

[dependencies]
ruv-fann = { path = "../../../", features = ["std", "serde", "parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ndarray = "0.15"
polars = { version = "0.40", features = ["lazy", "parquet", "temporal", "strings", "csv"] }
arrow = "51.0"
parquet = "51.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
num-traits = "0.2"
nalgebra = "0.33"
candle-core = "0.7"
candle-nn = "0.7"
candle-transformers = "0.7"
plotters = "0.3"
plotters-svg = "0.3"
kmeans = "0.8"
dbscan = "0.2"
hdbscan = "0.2"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-kernel = "0.7"
smartcore = "0.3"
statrs = "0.16"
approx = "0.5"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "cell_clustering_agent"
path = "src/main.rs"