[package]
name = "opt-mob-01"
version = "0.1.0"
edition = "2021"
description = "Predictive Handover Trigger Model for RAN Intelligence Platform"
authors = ["HandoverPredictorAgent <agent@ruv-fann.ai>"]

[dependencies]
# Core ruv-FANN dependency
ruv-fann = { path = "../../../", features = ["std", "serde", "parallel", "io"] }

# Async runtime and gRPC
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
tonic-build = "0.10"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "52.0"
arrow = "52.0"

# ML and preprocessing
ndarray = "0.15"
ndarray-stats = "0.5"
smartcore = "0.3"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"

# Configuration
config = "0.13"

# Async filesystem operations
tokio-fs = "0.1"

# CLI for training and serving
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
tempfile = "3.0"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "handover-predictor"
path = "src/main.rs"

[[bin]]
name = "train-handover-model"
path = "src/bin/train.rs"

[[bin]]
name = "backtest-handover-model"
path = "src/bin/backtest.rs"

[[benchmark]]
name = "handover_prediction_benchmark"
harness = false