[package]
name = "pfs-core-01"
version = "0.1.0"
edition = "2021"
description = "PFS-CORE-01: Rust gRPC service wrapping ruv-FANN for RAN Intelligence Platform"
license = "MIT OR Apache-2.0"
authors = ["RAN Intelligence Platform Team"]

[dependencies]
# Core ruv-FANN integration
ruv-fann = { path = "../../../", features = ["std", "serde", "parallel", "io"] }

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.14"

# CLI
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[[bench]]
name = "training_performance"
harness = false

[[bench]]
name = "prediction_performance"
harness = false

[[bin]]
name = "pfs-core-01-server"
path = "src/bin/server.rs"

[[bin]]
name = "pfs-core-01-client"
path = "src/bin/client.rs"