[package]
name = "uplink-interference-classifier"
version = "0.1.0"
edition = "2021"
authors = ["RAN Intelligence Platform Team"]
description = "ASA-INT-01 - Uplink Interference Classifier for RAN Intelligence Platform"
license = "MIT OR Apache-2.0"

[dependencies]
ruv-fann = { path = "../../../", features = ["std", "serde", "parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ndarray = "0.15"
polars = { version = "0.40", features = ["lazy", "parquet", "temporal", "strings"] }
arrow = "51.0"
parquet = "51.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
num-traits = "0.2"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "interference_classifier"
path = "src/main.rs"