[package]
name = "dni-cap-01"
version = "0.1.0"
edition = "2021"
authors = ["CapacityPlanningAgent <capacity@ran-intelligence.com>"]
description = "DNI-CAP-01 Capacity Cliff Forecaster for RAN Intelligence Platform"
keywords = ["ran", "5g", "capacity", "forecasting", "network-planning"]
categories = ["network-programming", "algorithms", "mathematics"]

[dependencies]
# Core ML engine
ruv-fann = { path = "../../../../", features = ["std", "serde", "parallel", "io"] }

# Long-term forecasting models
smartcore = { version = "0.3", features = ["serde"] }
linfa = "0.7"
linfa-linear = "0.7"
linfa-regression = "0.7"
ndarray = "0.15"
ndarray-stats = "0.5"

# Advanced time series analysis
statrs = "0.16"
argmin = "0.8"
argmin-math = "0.3"
nalgebra = "0.32"
num-traits = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
toml = "0.8"

# Network interfaces
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# gRPC for service interfaces
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "dni-cap-01-server"
path = "src/bin/server.rs"

[[bin]]
name = "dni-cap-01-client"
path = "src/bin/client.rs"

[[bin]]
name = "dni-cap-01-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "forecasting_benchmark"
harness = false