[package]
name = "ran-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities and types for RAN Intelligence Platform"

[dependencies]
# Core utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }

# Configuration
config = { workspace = true }

# gRPC
tonic = { workspace = true }
ran-proto = { path = "../proto" }

[lib]
name = "ran_common"
path = "src/lib.rs"